Fix firefox tag layout bug

--- a/src/server/common/components/tag/_tag.scss
+++ b/src/server/common/components/tag/_tag.scss
@@ -2,7 +2,7 @@
   border-radius: $app-border-radius;
 
   &::first-letter {
-    text-transform: uppercase;
+    text-transform: capitalize;
   }
 }
 
